# zigporter-hacs

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  web-test-runner.config.mjs  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  validate.yml
custom_components/zigporter/: __init__.py  config_flow.py  const.py  manifest.json  network_map.py  network_map_svg.py  strings.json  websocket_api.py
custom_components/zigporter/static/: zigporter-network-map-card.js
docs/: index.md  troubleshooting.md
docs/getting-started/: configuration.md  installation.md
docs/guide/: colors.md  network-map.md
scripts/: _ha_stubs.py  generate_demo_svg.py
tests/: conftest.py  test_config_flow.py  test_init.py  test_network_map.py  test_network_map_svg.py  test_websocket_api.py
tests/js/: zigporter-network-map-card.test.js
