[project]
name = "zigporter-hacs"
version = "0.8.3"
description = "Zigporter HACS integration for Home Assistant"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.8",
    "voluptuous>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "BLE", "PLC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/zigporter"]
omit = ["custom_components/zigporter/config_flow.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
